config node modules grunt

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,4 +8,7 @@ Description: Make all of your modifications to X in this child theme.
 Version: 1.0.0
 Template: x
 
-*/.h-landmark span{color:#FFF}
+*/
+.h-landmark span {
+	color: #FFF; 
+}
