--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,6 +9,10 @@ Version: 1.0.0
 Template: x
 
 */
+.x-main.full {
+	min-height: 600px;
+}
+
 .home {
 	.x-slider-container.below {
 		border-bottom: none;
@@ -123,4 +127,55 @@ footer {
 			}		
 		} 
 	} 
+}
+
+.woocommerce {
+	.page-title {
+		text-transform: uppercase;
+	}
+	.x-header-landmark {
+		display: none;
+	}
+	.products {
+		height: 60px;
+		background-color: #333;
+	}
+	li.product {
+		&.product-category {
+			box-shadow: none;
+			background-color: #333;
+			border-radius: 0;
+			height: 60px;
+			mark {
+				display: none;
+			}
+			h3 {
+				font-size: 14px;
+				text-transform: uppercase;
+				color: #FFF;
+				margin: 0;
+				text-align: center;
+				position: absolute;
+				top: 48%;
+				left: 50%;
+			    margin-right: -50%;
+			    transform: translate(-50%, -50%);
+				padding: 0 10px;
+			}
+		}
+	}
+	.cols-1 li.product {
+		&[class*= cat-menu-col-] {
+			float: left;
+			clear: none;
+			margin: 0;
+		}
+	}
+}
+
+@for $i from 1 through 100 {
+	$width: percentage($i / 100) !important;
+	.cat-menu-col-#{$i} {
+		width: $width
+	}
 }
