--- a/style-readable.css
+++ b/style-readable.css
@@ -9,6 +9,10 @@ Version: 1.0.0
 Template: x
 
 */
+.x-main.full {
+  min-height: 600px;
+}
+
 .home .x-slider-container.below {
   border-bottom: none;
 }
@@ -106,4 +110,442 @@ footer .gform_wrapper .top_label .gfield .name_first input {
 }
 footer .gform_wrapper .top_label .gfield_label {
   display: none;
+}
+
+.woocommerce .page-title {
+  text-transform: uppercase;
+}
+.woocommerce .x-header-landmark {
+  display: none;
+}
+.woocommerce .products {
+  height: 60px;
+  background-color: #333;
+}
+.woocommerce li.product.product-category {
+  box-shadow: none;
+  background-color: #333;
+  border-radius: 0;
+  height: 60px;
+}
+.woocommerce li.product.product-category mark {
+  display: none;
+}
+.woocommerce li.product.product-category h3 {
+  font-size: 14px;
+  text-transform: uppercase;
+  color: #FFF;
+  margin: 0;
+  text-align: center;
+  position: absolute;
+  top: 48%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  padding: 0 10px;
+}
+.woocommerce .cols-1 li.product[class*=cat-menu-col-] {
+  float: left;
+  clear: none;
+  margin: 0;
+}
+
+.cat-menu-col-1 {
+  width: 1% !important;
+}
+
+.cat-menu-col-2 {
+  width: 2% !important;
+}
+
+.cat-menu-col-3 {
+  width: 3% !important;
+}
+
+.cat-menu-col-4 {
+  width: 4% !important;
+}
+
+.cat-menu-col-5 {
+  width: 5% !important;
+}
+
+.cat-menu-col-6 {
+  width: 6% !important;
+}
+
+.cat-menu-col-7 {
+  width: 7% !important;
+}
+
+.cat-menu-col-8 {
+  width: 8% !important;
+}
+
+.cat-menu-col-9 {
+  width: 9% !important;
+}
+
+.cat-menu-col-10 {
+  width: 10% !important;
+}
+
+.cat-menu-col-11 {
+  width: 11% !important;
+}
+
+.cat-menu-col-12 {
+  width: 12% !important;
+}
+
+.cat-menu-col-13 {
+  width: 13% !important;
+}
+
+.cat-menu-col-14 {
+  width: 14% !important;
+}
+
+.cat-menu-col-15 {
+  width: 15% !important;
+}
+
+.cat-menu-col-16 {
+  width: 16% !important;
+}
+
+.cat-menu-col-17 {
+  width: 17% !important;
+}
+
+.cat-menu-col-18 {
+  width: 18% !important;
+}
+
+.cat-menu-col-19 {
+  width: 19% !important;
+}
+
+.cat-menu-col-20 {
+  width: 20% !important;
+}
+
+.cat-menu-col-21 {
+  width: 21% !important;
+}
+
+.cat-menu-col-22 {
+  width: 22% !important;
+}
+
+.cat-menu-col-23 {
+  width: 23% !important;
+}
+
+.cat-menu-col-24 {
+  width: 24% !important;
+}
+
+.cat-menu-col-25 {
+  width: 25% !important;
+}
+
+.cat-menu-col-26 {
+  width: 26% !important;
+}
+
+.cat-menu-col-27 {
+  width: 27% !important;
+}
+
+.cat-menu-col-28 {
+  width: 28% !important;
+}
+
+.cat-menu-col-29 {
+  width: 29% !important;
+}
+
+.cat-menu-col-30 {
+  width: 30% !important;
+}
+
+.cat-menu-col-31 {
+  width: 31% !important;
+}
+
+.cat-menu-col-32 {
+  width: 32% !important;
+}
+
+.cat-menu-col-33 {
+  width: 33% !important;
+}
+
+.cat-menu-col-34 {
+  width: 34% !important;
+}
+
+.cat-menu-col-35 {
+  width: 35% !important;
+}
+
+.cat-menu-col-36 {
+  width: 36% !important;
+}
+
+.cat-menu-col-37 {
+  width: 37% !important;
+}
+
+.cat-menu-col-38 {
+  width: 38% !important;
+}
+
+.cat-menu-col-39 {
+  width: 39% !important;
+}
+
+.cat-menu-col-40 {
+  width: 40% !important;
+}
+
+.cat-menu-col-41 {
+  width: 41% !important;
+}
+
+.cat-menu-col-42 {
+  width: 42% !important;
+}
+
+.cat-menu-col-43 {
+  width: 43% !important;
+}
+
+.cat-menu-col-44 {
+  width: 44% !important;
+}
+
+.cat-menu-col-45 {
+  width: 45% !important;
+}
+
+.cat-menu-col-46 {
+  width: 46% !important;
+}
+
+.cat-menu-col-47 {
+  width: 47% !important;
+}
+
+.cat-menu-col-48 {
+  width: 48% !important;
+}
+
+.cat-menu-col-49 {
+  width: 49% !important;
+}
+
+.cat-menu-col-50 {
+  width: 50% !important;
+}
+
+.cat-menu-col-51 {
+  width: 51% !important;
+}
+
+.cat-menu-col-52 {
+  width: 52% !important;
+}
+
+.cat-menu-col-53 {
+  width: 53% !important;
+}
+
+.cat-menu-col-54 {
+  width: 54% !important;
+}
+
+.cat-menu-col-55 {
+  width: 55% !important;
+}
+
+.cat-menu-col-56 {
+  width: 56% !important;
+}
+
+.cat-menu-col-57 {
+  width: 57% !important;
+}
+
+.cat-menu-col-58 {
+  width: 58% !important;
+}
+
+.cat-menu-col-59 {
+  width: 59% !important;
+}
+
+.cat-menu-col-60 {
+  width: 60% !important;
+}
+
+.cat-menu-col-61 {
+  width: 61% !important;
+}
+
+.cat-menu-col-62 {
+  width: 62% !important;
+}
+
+.cat-menu-col-63 {
+  width: 63% !important;
+}
+
+.cat-menu-col-64 {
+  width: 64% !important;
+}
+
+.cat-menu-col-65 {
+  width: 65% !important;
+}
+
+.cat-menu-col-66 {
+  width: 66% !important;
+}
+
+.cat-menu-col-67 {
+  width: 67% !important;
+}
+
+.cat-menu-col-68 {
+  width: 68% !important;
+}
+
+.cat-menu-col-69 {
+  width: 69% !important;
+}
+
+.cat-menu-col-70 {
+  width: 70% !important;
+}
+
+.cat-menu-col-71 {
+  width: 71% !important;
+}
+
+.cat-menu-col-72 {
+  width: 72% !important;
+}
+
+.cat-menu-col-73 {
+  width: 73% !important;
+}
+
+.cat-menu-col-74 {
+  width: 74% !important;
+}
+
+.cat-menu-col-75 {
+  width: 75% !important;
+}
+
+.cat-menu-col-76 {
+  width: 76% !important;
+}
+
+.cat-menu-col-77 {
+  width: 77% !important;
+}
+
+.cat-menu-col-78 {
+  width: 78% !important;
+}
+
+.cat-menu-col-79 {
+  width: 79% !important;
+}
+
+.cat-menu-col-80 {
+  width: 80% !important;
+}
+
+.cat-menu-col-81 {
+  width: 81% !important;
+}
+
+.cat-menu-col-82 {
+  width: 82% !important;
+}
+
+.cat-menu-col-83 {
+  width: 83% !important;
+}
+
+.cat-menu-col-84 {
+  width: 84% !important;
+}
+
+.cat-menu-col-85 {
+  width: 85% !important;
+}
+
+.cat-menu-col-86 {
+  width: 86% !important;
+}
+
+.cat-menu-col-87 {
+  width: 87% !important;
+}
+
+.cat-menu-col-88 {
+  width: 88% !important;
+}
+
+.cat-menu-col-89 {
+  width: 89% !important;
+}
+
+.cat-menu-col-90 {
+  width: 90% !important;
+}
+
+.cat-menu-col-91 {
+  width: 91% !important;
+}
+
+.cat-menu-col-92 {
+  width: 92% !important;
+}
+
+.cat-menu-col-93 {
+  width: 93% !important;
+}
+
+.cat-menu-col-94 {
+  width: 94% !important;
+}
+
+.cat-menu-col-95 {
+  width: 95% !important;
+}
+
+.cat-menu-col-96 {
+  width: 96% !important;
+}
+
+.cat-menu-col-97 {
+  width: 97% !important;
+}
+
+.cat-menu-col-98 {
+  width: 98% !important;
+}
+
+.cat-menu-col-99 {
+  width: 99% !important;
+}
+
+.cat-menu-col-100 {
+  width: 100% !important;
 }
