--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,7 +10,7 @@ Template: x
 
 */
 .x-main.full {
-	min-height: 600px;
+	min-height: 900px;
 }
 
 .home {
@@ -92,6 +92,9 @@ footer {
 				}
 			}
 		}
+		ul.gform_fields li.gfield {
+		    padding-right: 0 !important;
+		}
 		.top_label {
 			li.gfield.gf_left_half{
 				margin-right: 0;
@@ -136,18 +139,26 @@ footer {
 	.x-header-landmark {
 		display: none;
 	}
-	.products {
+	.nav-categories {
 		height: 60px;
 		background-color: #333;
-	}
-	li.product {
-		&.product-category {
+		margin: 0 !important;
+		li.product.product-category {
 			box-shadow: none;
 			background-color: #333;
 			border-radius: 0;
 			height: 60px;
+			float: left;
+			clear: none;
+			margin: 0;
+			list-style: none;
 			mark {
 				display: none;
+			}
+			a {
+				width: 100%;
+				height: 100%;
+				display: block;
 			}
 			h3 {
 				font-size: 14px;
@@ -164,12 +175,9 @@ footer {
 			}
 		}
 	}
-	.cols-1 li.product {
-		&[class*= cat-menu-col-] {
-			float: left;
-			clear: none;
-			margin: 0;
-		}
+	.term-description {
+		font-size: 18px;
+		margin: 40px 0;
 	}
 }
 
