--- a/style-readable.css
+++ b/style-readable.css
@@ -10,7 +10,7 @@ Template: x
 
 */
 .x-main.full {
-  min-height: 600px;
+  min-height: 900px;
 }
 
 .home .x-slider-container.below {
@@ -79,6 +79,9 @@ footer .widget ul, footer .widget ol {
 footer .gform_wrapper .field_sublabel_hidden_label .ginput_complex.ginput_container input, footer .gform_wrapper .field_sublabel_hidden_label .ginput_complex.ginput_container select {
   margin-bottom: 0;
 }
+footer .gform_wrapper ul.gform_fields li.gfield {
+  padding-right: 0 !important;
+}
 footer .gform_wrapper .top_label li.gfield.gf_left_half {
   margin-right: 0;
   padding-right: 0;
@@ -118,20 +121,30 @@ footer .gform_wrapper .top_label .gfield_label {
 .woocommerce .x-header-landmark {
   display: none;
 }
-.woocommerce .products {
+.woocommerce .nav-categories {
   height: 60px;
   background-color: #333;
+  margin: 0 !important;
 }
-.woocommerce li.product.product-category {
+.woocommerce .nav-categories li.product.product-category {
   box-shadow: none;
   background-color: #333;
   border-radius: 0;
   height: 60px;
+  float: left;
+  clear: none;
+  margin: 0;
+  list-style: none;
 }
-.woocommerce li.product.product-category mark {
+.woocommerce .nav-categories li.product.product-category mark {
   display: none;
 }
-.woocommerce li.product.product-category h3 {
+.woocommerce .nav-categories li.product.product-category a {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+.woocommerce .nav-categories li.product.product-category h3 {
   font-size: 14px;
   text-transform: uppercase;
   color: #FFF;
@@ -144,10 +157,9 @@ footer .gform_wrapper .top_label .gfield_label {
   transform: translate(-50%, -50%);
   padding: 0 10px;
 }
-.woocommerce .cols-1 li.product[class*=cat-menu-col-] {
-  float: left;
-  clear: none;
-  margin: 0;
+.woocommerce .term-description {
+  font-size: 18px;
+  margin: 40px 0;
 }
 
 .cat-menu-col-1 {
