--- a/style-readable.css
+++ b/style-readable.css
@@ -17,6 +17,10 @@ h1 {
   top: 62px;
 }
 
+.x-icon-home {
+  font-size: 22px;
+}
+
 .home .x-slider-container.below {
   border-bottom: none;
 }
@@ -59,60 +63,19 @@ h1 {
 .home .container-form .gform_wrapper .top_label .gfield_label {
   display: none;
 }
-.home .slide-sub-menu [class*=slide-sub-menu-] {
-  border-left: 1px solid #444;
-}
-.home .slide-sub-menu [class*=slide-sub-menu-] p:before {
-  content: "";
-  display: inline-block;
-  width: 25px;
-  height: 20px;
-  position: relative;
-  margin-bottom: -2px;
-}
-.home .slide-sub-menu .slide-sub-menu-1 {
-  border-left: none;
-}
-.home .slide-sub-menu .slide-sub-menu-1 p:before {
-  background: url("http://digisensor.com.br/wp-content/uploads/2016/08/Shape-12.png") no-repeat;
-  left: -2px;
-  top: 6px;
-}
-.home .slide-sub-menu .slide-sub-menu-2 {
-  border-left: none;
-}
-.home .slide-sub-menu .slide-sub-menu-2 p:before {
-  background: url("http://digisensor.com.br/wp-content/uploads/2016/08/Shape-13.png") no-repeat;
-  left: -5px;
-  top: 5px;
-}
-.home .slide-sub-menu .slide-sub-menu-3 {
-  border-left: none;
-}
-.home .slide-sub-menu .slide-sub-menu-3 p:before {
-  background: url("http://digisensor.com.br/wp-content/uploads/2016/08/Shape-14.png") no-repeat;
-  left: -1px;
-  top: 4px;
-}
-.home .slide-sub-menu .slide-sub-menu-4 {
-  border-left: none;
-}
-.home .slide-sub-menu .slide-sub-menu-4 p:before {
-  background: url("http://digisensor.com.br/wp-content/uploads/2016/08/Shape-15.png") no-repeat;
-  left: 2px;
-  top: 4px;
-}
-.home .slide-sub-menu p {
-  color: #FFF;
-  font-weight: 500;
-  font-size: 13px;
-  margin-bottom: 2px;
-  padding: 10px;
-  text-transform: uppercase;
+
+.x-comments-area, .single-post .entry-featured {
+  display: none;
 }
 
-.x-comments-area {
-  display: none;
+.single-post .entry-content .x-img {
+  display: block;
+  margin: 20px auto;
+}
+
+.more-link {
+  font-weight: 400;
+  text-transform: lowercase;
 }
 
 footer.x-colophon.top {
@@ -130,6 +93,10 @@ footer .widget ul, footer .widget ol {
   top: 98px;
 }
 
+.woocommerce.term-protecao-contra-explosao .page-title, .woocommerce.term-deteccao-e-supressao-de-explosao .page-title, .woocommerce.term-sistemas-especiais .page-title {
+  color: #000;
+}
+
 .woocommerce .page-title {
   text-transform: uppercase;
   text-align: left;
@@ -139,7 +106,7 @@ footer .widget ul, footer .widget ol {
   display: none;
 }
 .woocommerce .nav-categories {
-  height: 60px;
+  height: 40px;
   background-color: #3F3F3F;
 }
 .woocommerce .nav-categories.scroll {
@@ -152,7 +119,7 @@ footer .widget ul, footer .widget ol {
   box-shadow: none;
   background-color: #3F3F3F;
   border-radius: 0;
-  height: 60px;
+  height: 40px;
   float: left;
   clear: none;
   margin: 0;
@@ -167,7 +134,8 @@ footer .widget ul, footer .widget ol {
   display: block;
 }
 .woocommerce .nav-categories li.product.product-category h3 {
-  font-size: 13px;
+  font-size: 12px;
+  letter-spacing: .1em;
   text-transform: uppercase;
   color: #FFF;
   margin: 0;
@@ -180,7 +148,7 @@ footer .widget ul, footer .widget ol {
   padding: 0 10px;
 }
 .woocommerce .scroll ~ .x-container {
-  margin-top: 60px;
+  margin-top: 40px;
 }
 .woocommerce ul.products {
   padding-top: 100px;
@@ -192,7 +160,7 @@ footer .widget ul, footer .widget ol {
   box-shadow: none !important;
 }
 .woocommerce li.product .entry-product .entry-featured {
-  width: 20%;
+  width: 25%;
   float: left;
   border-bottom: none !important;
   box-shadow: none !important;
@@ -215,14 +183,14 @@ footer .widget ul, footer .widget ol {
   display: none;
 }
 .woocommerce li.product .product-content {
-  width: 80%;
+  width: 75%;
   float: left;
   padding-left: 20px;
 }
 .woocommerce li.product h3 {
   padding-left: 20px;
   text-transform: uppercase;
-  width: 80%;
+  width: 75%;
   float: left;
 }
 .woocommerce li.product h3 a:hover {
@@ -266,11 +234,11 @@ footer .widget_pages ul li a:hover {
   color: #FFF;
 }
 footer.x-colophon.top {
-  background-color: #3F3F3F;
+  background-color: #000024;
   padding: 30px 0 0px;
 }
 footer.x-colophon.bottom {
-  background-color: #3F3F3F;
+  background-color: #000024;
 }
 footer.x-colophon.bottom .x-colophon-content {
   margin: 7px;
